--- a/jobs/openwebtext_adam_test.yaml
+++ b/jobs/openwebtext_adam_test.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: openwebtext_adam_test
+  name: openwebtext_adam_test2
   output_dir: results
   num_gpus: 1
   num_nodes: 1
@@ -59,14 +59,16 @@ parameters:
     z_loss_coefficient: [0.0001]
     lr_scheduler: ['cosine']
     decoupled_wd: [0.0001]
-    lr: [3.16e-01, 3.16e-02, 3.16e-03, 3.16e-04, 3.16e-05, 1.0e-01, 1.0e-02, 1.0e-03]
+    lr: [3.16e-00,3.16e-01, 3.16e-02, 3.16e-03, 3.16e-04, 3.16e-05, 1.0e+01, 1.0e-00, 1.0e-01, 1.0e-02, 1.0e-03]
     epochs: [50]
-    wandb_project_name: ['openwebtext_adam_test']
+    wandb_project_name: ['openwebtext_adam_test2']
     delete_previous_checkpoint: [true]
     workers: [4]
     dataset_manifest: ["data/openwebtext2_tokenized/manifest_train.jsonl"]
     val_data: ["data/openwebtext2_tokenized/00000026.tar"]
     averagers: ['poly_8_1']
-    optim_alg: ['adamw']
+    optim_alg: ['adamw_test']
+
+
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
