--- a/jobs/openwebtext_ladam_layer_wise.yaml
+++ b/jobs/openwebtext_ladam_layer_wise.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: openwebtext_ladam_per_param_adam_fixed_batch16_2
+  name: openwebtext_ladam_leyer_wise
   output_dir: results
   num_gpus: 1
   num_nodes: 1
@@ -12,7 +12,6 @@ parameters:
       # - model: ['layers=10_hidden-dim=384']
       #   max_tokens: [2069299200] 
       
-    warmup_tokens: eval("[ 10000000 * 5 ]")
     train_num_samples: [10000000]
     val_num_samples: [2000]
     # ~130B as in kaplan (note that we set 1000 epochs for avoiding repeating too much data in resuming),
@@ -48,8 +47,6 @@ parameters:
     log_every_n_steps: [20]
     csv_log: [true]
     grad_clip_norm: [1]
-    beta1: [0.9] # eval("[ 1 - 10**(-k/2) for k in range(0,7) ]")
-    beta2: [0.999]
     eps: [1.0e-08]
     report_to: ['wandb'] # 
     resume: ['latest']
@@ -57,11 +54,8 @@ parameters:
     lr_cooldown_end: [3.0e-05] # in the rpj config it was like that, so I keep it
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['cosine']
-    decoupled_wd: [0.0001]
-    lr: [3.16e-00,3.16e-01, 3.16e-02, 3.16e-03, 3.16e-04, 3.16e-05, 1.0e+01, 1.0e-00, 1.0e-01, 1.0e-02, 1.0e-03]
     epochs: [50]
-    wandb_project_name: ['openwebtext_ladam_per_param_adam_fixed_batch']
+    wandb_project_name: ['openwebtext_ladam_leyer_wise']
     delete_previous_checkpoint: [true]
     workers: [4]
     dataset_manifest: ["data/openwebtext2_tokenized/manifest_train.jsonl"]
@@ -69,14 +63,34 @@ parameters:
     averagers: ['poly_8_1']
     optim_alg: ['adamw']
     dog_granularity: ['param']
-    granularity_norm: ['all', false]
-    granularity_per_token: [true] # [false] # 
-    granularity_per_param: [false] # [true] # 
-    LIST_OF_GRANULARITIES:
-      - granularity_attentions: [true]
-        granularity_feed_forward: [true]
-      - granularity_attentions: [false]
-        granularity_feed_forward: [false]
-    ladamw_g_op: ['max', 'avg']
+    granularity_norm: [false]
+    granularity_per_token: [false] # [false] # 
+    granularity_per_param: [false] # [true] #
+    max_rbar: [false]
+    decouple_decay: [true]
+    decay_factor: [1.0]
+    LIST_OF_OPT:
+      - optim_alg: ['adamw']
+        warmup_tokens: eval("[ 10000000 * 5 ]")
+        ladamw_g_op: ['max', 'avg']
+        lr_scheduler: ['cosine']
+        decoupled_wd: [0.0001]
+        lr: [3.16e-00,3.16e-01, 3.16e-02, 3.16e-03, 3.16e-04, 3.16e-05, 1.0e+01, 1.0e-00, 1.0e-01, 1.0e-02, 1.0e-03, 1.0e-04]
+        beta1: [0.9, 0.0] # eval("[ 1 - 10**(-k/2) for k in range(0,7) ]")
+        beta2: [0.999]
+        dog_init_dist_rel: [null]
+        normalize_rbar: [null]
+        dog_decay_to_init: [null]
+      - optim_alg: ['dog','accele_dog']
+        warmup_tokens: eval("[ 0 ]")
+        ladamw_g_op: ['max']
+        lr_scheduler: ['const']
+        decoupled_wd: [0.0001, 0.0]
+        lr: [1.]
+        beta1: [1.0] # eval("[ 1 - 10**(-k/2) for k in range(0,7) ]")
+        beta2: [1.0]
+        dog_init_dist_rel: [1.0e-06, 1.0e-04, 1.0e-02]
+        normalize_rbar: [true,false]
+        dog_decay_to_init: [true,false]
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
