--- a/3090plus.yaml
+++ b/3090plus.yaml
@@ -6,5 +6,5 @@ ntasks_per_node: 1
 cpus_per_task: 6
 gpus_per_task: 1
 mem: "32G"
-constraint: "tesla_v100|geforce_rtx_3090|a5000|a6000"
-exclude: "n-602"
+constraint: "tesla_v100|geforce_rtx_3090|a5000|a6000|l40s"
+#exclude: "rack-gww-dgx1"
