--- a/jobs/openwebtext_adam2.yaml
+++ b/jobs/openwebtext_adam2.yaml
@@ -1,18 +1,17 @@
 job_details:
-  name: openwebtext_ladam_per_param_adam_fixed_batch16_2
+  name: openwebtext_adam_10_layers_beta2_64
   output_dir: results
-  num_gpus: 1
+  num_gpus: 2
   num_nodes: 1
 parameters:
     save_checkpoint: [false]
     LIST_MODEL_WARMUP_TOKENS:
 
-      - model: ['layers=6_hidden-dim=224']
-        max_tokens: [2069299200]
-      # - model: ['layers=10_hidden-dim=384']
-      #   max_tokens: [2069299200] 
+      # - model: ['layers=6_hidden-dim=224']
+      #   max_tokens: [2069299200]
+      - model: ['layers=10_hidden-dim=384']
+        max_tokens: [2069299200] 
       
-    warmup_tokens: eval("[ 10000000 * 5 ]")
     train_num_samples: [10000000]
     val_num_samples: [2000]
     # ~130B as in kaplan (note that we set 1000 epochs for avoiding repeating too much data in resuming),
@@ -26,12 +25,12 @@ parameters:
       # - batch_size: [4] # global batch size is 16*4=64
       #   accum_freq: [1]
       #   val_freq: [1]
-      - batch_size: [16]
-        accum_freq: [4]
-        val_freq: [1]
-      # - batch_size: [64]
-      #   accum_freq: [16]
-      #   val_freq: [4]
+      # - batch_size: [16]
+      #   accum_freq: [4]
+      #   val_freq: [1]
+      - batch_size: [64]
+        accum_freq: [16]
+        val_freq: [4]
       # - batch_size: [2]
       #   accum_freq: [1]
       #   val_freq: [1]
@@ -48,35 +47,34 @@ parameters:
     log_every_n_steps: [20]
     csv_log: [true]
     grad_clip_norm: [1]
-    beta1: [0.9] # eval("[ 1 - 10**(-k/2) for k in range(0,7) ]")
-    beta2: [0.999]
     eps: [1.0e-08]
-    report_to: ['wandb'] # 
+    report_to: [''] # 
     resume: ['latest']
     data_key: ['json.gz']
     lr_cooldown_end: [3.0e-05] # in the rpj config it was like that, so I keep it
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['cosine']
-    decoupled_wd: [0.0001]
-    lr: [3.16e-00,3.16e-01, 3.16e-02, 3.16e-03, 3.16e-04, 3.16e-05, 1.0e+01, 1.0e-00, 1.0e-01, 1.0e-02, 1.0e-03]
-    epochs: [50]
-    wandb_project_name: ['openwebtext_ladam_per_param_adam_fixed_batch']
+    epochs: [100]
+    wandb_project_name: [null]
     delete_previous_checkpoint: [true]
     workers: [4]
     dataset_manifest: ["data/openwebtext2_tokenized/manifest_train.jsonl"]
     val_data: ["data/openwebtext2_tokenized/00000026.tar"]
-    averagers: ['poly_8_1']
+    averagers: ['poly_8_1,poly_32_1']
     optim_alg: ['adamw']
-    dog_granularity: ['param']
-    granularity_norm: ['all', false]
-    granularity_per_token: [true] # [false] # 
-    granularity_per_param: [false] # [true] # 
-    LIST_OF_GRANULARITIES:
-      - granularity_attentions: [true]
-        granularity_feed_forward: [true]
-      - granularity_attentions: [false]
-        granularity_feed_forward: [false]
-    ladamw_g_op: ['max', 'avg']
+    ladamw_g_op: [null]
+    warmup_tokens: eval("[ 10000000 * 5 ]") # eval("[ 0 ]") #
+    lr_scheduler: ['cosine'] # 'const'
+    decoupled_wd: [0.0001]
+    lr: [3.16e-00,3.16e-01, 3.16e-02, 3.16e-03, 3.16e-04, 3.16e-05, 1.0e+01, 1.0e-00, 1.0e-01, 1.0e-02, 1.0e-03, 1.0e-04, 1.0e-05]
+    beta1: [0.9, 0] # eval("[ 1 - 10**(-k/2) for k in range(0,7) ]")
+    beta2: [0.99, 0.95]
+    dog_init_dist_rel: [null]
+    normalize_rbar: [null]
+    dog_decay_to_init: [null]
+    max_rbar: [false]
+    decouple_decay: [true]
+    decay_factor: [1.0]
+    dog_granularity: [null]
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
