--- a/jobs/openwebtext_dog_scheduler.yaml
+++ b/jobs/openwebtext_dog_scheduler.yaml
@@ -1,5 +1,5 @@
 job_details:
-  name: openwebtext_ladam_per_param_adam_fixed_batch16_2
+  name: openwebtext_dog_scheduler
   output_dir: results
   num_gpus: 1
   num_nodes: 1
@@ -8,11 +8,8 @@ parameters:
     LIST_MODEL_WARMUP_TOKENS:
 
       - model: ['layers=6_hidden-dim=224']
-        max_tokens: [2069299200]
-      # - model: ['layers=10_hidden-dim=384']
-      #   max_tokens: [2069299200] 
+        max_tokens: [2069299200] 
       
-    warmup_tokens: eval("[ 10000000 * 5 ]")
     train_num_samples: [10000000]
     val_num_samples: [2000]
     # ~130B as in kaplan (note that we set 1000 epochs for avoiding repeating too much data in resuming),
@@ -47,36 +44,62 @@ parameters:
     grad_checkpointing: [true]
     log_every_n_steps: [20]
     csv_log: [true]
-    grad_clip_norm: [1]
-    beta1: [0.9] # eval("[ 1 - 10**(-k/2) for k in range(0,7) ]")
-    beta2: [0.999]
+    grad_clip_norm: [1] # [5, null] # [1] #
+    fake_grad_clip_norm: [1]
     eps: [1.0e-08]
-    report_to: ['wandb'] # 
+    report_to: ['wandb'] # [''] # 
     resume: ['latest']
     data_key: ['json.gz']
     lr_cooldown_end: [3.0e-05] # in the rpj config it was like that, so I keep it
     qk_norm: [true]
     z_loss_coefficient: [0.0001]
-    lr_scheduler: ['cosine']
-    decoupled_wd: [0.0001]
-    lr: [3.16e-00,3.16e-01, 3.16e-02, 3.16e-03, 3.16e-04, 3.16e-05, 1.0e+01, 1.0e-00, 1.0e-01, 1.0e-02, 1.0e-03]
+    LIST_OF_SCHEDULERS:
+      - lr_scheduler: ['const']
+        warmup_tokens: [0]
+        warmup_start: [1.0]
+        gradient_scheduler: [false]
+      - lr_scheduler: ['cosine']
+        warmup_tokens: eval("[ 10000000 * 25 ]")
+        warmup_start: [1.0]
+        gradient_scheduler: [false,true]
+    wd: [0] # [0.00001, 0.0000033, 0] # 
+    lr: [1.0]
     epochs: [50]
-    wandb_project_name: ['openwebtext_ladam_per_param_adam_fixed_batch']
+    wandb_project_name: ['openwebtext_dog_rbar_adog_perparam']
     delete_previous_checkpoint: [true]
     workers: [4]
     dataset_manifest: ["data/openwebtext2_tokenized/manifest_train.jsonl"]
     val_data: ["data/openwebtext2_tokenized/00000026.tar"]
-    averagers: ['poly_8_1']
-    optim_alg: ['adamw']
-    dog_granularity: ['param']
-    granularity_norm: ['all', false]
-    granularity_per_token: [true] # [false] # 
-    granularity_per_param: [false] # [true] # 
+    averagers: ['poly_32_1,poly_8_1']
+    optim_alg: ['dog','accele_dog'] # ['accele_dog'] # 
+    dog_granularity: ['param'] # ['all', 'param'] #
+    # LIST_OF_GRANULARITIES:
+    #   - granularity_per_token: [true,false]
+    #     #granularity_attentions: [false,true] # [false] # 
+    #     #granularity_feed_forward: [false,true] # [false] #
+    #     #granularity_reverse: [false,true] # [false] # 
+    #     granularity_output: [True]
+    #     granularity_input: [True]
+    #   - granularity_per_token: [false]
+    #     #granularity_attentions: [false,true] # [false] # 
+    #     #granularity_feed_forward: [false,true] # [false] #
+    #     #granularity_reverse: [false,true] # [false] # 
+    #     granularity_output: [false]
+    #     granularity_input: [false]
+    granularity_per_token: [true]
+    granularity_per_param: [false]
+    granularity_norm: [false]
     LIST_OF_GRANULARITIES:
       - granularity_attentions: [true]
         granularity_feed_forward: [true]
-      - granularity_attentions: [false]
-        granularity_feed_forward: [false]
-    ladamw_g_op: ['max', 'avg']
+    dog_init_dist_rel: [1.0e-06, 1.0e-04]
+    normalized_weights: [false] # ['all'] # ['input,output', 'all']
+    dog_init_dist_rel_normalize: [1.0e-02] # [1.0]
+    dog_decay_to_init: [true]
+    decouple_decay: [true]
+    decay_factor: [1.0]
+    max_rbar: [false]
+    normalize_rbar: [true,false]
+    #momentum: eval("[1 - 0.1**(i/2) for i in range(11) ] + [1.0]")
     # if there are 600B tokens in RW, and all of them are uniformly distributed in the shards, then each shard has 600B/42512 = 14.1M tokens
     # so, keeping 1000 shards for validation, we have 1000*14.1M = 14.1B tokens for validation
